feat(menu): add menu endpoints, docs
